openturns/1.16/_sources/auto_reliability_sensitivity/design_of_experiments/plot_monte_carlo_experiment.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_reliability_sensitivity_design_of_experiments_plot_monte_carlo_experiment.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_monte_carlo_experiment.py:


Create a Monte Carlo design of experiments
==========================================

In this example we are going to create a MonteCarlo probabilistic design experiment.


.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt
    ot.Log.Show(ot.Log.NONE)








Define underlying distribution, size


.. code-block:: default

    distribution = ot.Normal(2)
    size = 50








Create the design


.. code-block:: default

    experiment = ot.MonteCarloExperiment(distribution, size)
    sample = experiment.generate()








Plot the design


.. code-block:: default

    graph = ot.Graph("MC design", "x1", "x2", True, "")
    cloud = ot.Cloud(sample, "blue", "fsquare", "")
    graph.add(cloud)
    view = viewer.View(graph)
    plt.show()




.. image:: /auto_reliability_sensitivity/design_of_experiments/images/sphx_glr_plot_monte_carlo_experiment_001.png
    :alt: MC design
    :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.060 seconds)


.. _sphx_glr_download_auto_reliability_sensitivity_design_of_experiments_plot_monte_carlo_experiment.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_monte_carlo_experiment.py <plot_monte_carlo_experiment.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_monte_carlo_experiment.ipynb <plot_monte_carlo_experiment.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
